examples/test/testpolicy13902.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13902
  namespace: namespace200
spec:
  podSelector:
    matchLabels:
      key9: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value35
          key30: value45
      podSelector:
        matchLabels:
          key25: value38
          key48: value2
